--- a/src/main/resources/static/Rest.html
+++ b/src/main/resources/static/Rest.html
@@ -26,8 +26,45 @@
                 contentType:false,
                 dataType:"json",
                 success:function(result){
-                    var version = result.version.toString();
-                    $("#version").attr("placeholder","当前版本号是："+version+"，请输入新的版本号");
+                    debugger;
+                    for (var key in result) {
+                        switch (key) {
+                            case "kms-restful.jar":
+                                $("#Rest_lastModifiedTime").text("已上传！"+result[key]);
+                                break;
+                            case "version":
+                                $("#version").attr("placeholder","当前版本号是："+result[key].toString()+"，请输入新的版本号");
+                            default:
+                                break;
+                        }
+                    }
+                },
+
+                error:function(e){
+                    console.log("error");
+                }
+            });
+        }
+        function getUploadInfo(){
+            $.ajax({
+                url:"/KmsPackage/getUploadInfo?module=Rest",
+                async: false, //同步执行
+                type:"get",
+//               data:form,
+                processData:false,
+                contentType:false,
+                dataType:"json",
+                success:function(result){
+                    debugger;
+                    for (var key in result) {
+                        switch (key) {
+                            case "kms-restful.jar":
+                                $("#Rest_lastModifiedTime").text("已上传！"+result[key]);
+                                break;
+                            default:
+                                break;
+                        }
+                    }
                 },
 
                 error:function(e){
@@ -48,9 +85,10 @@
                 }
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
-                    debugger;
-                    if(res.code="0"){
+
+                    if(res.code=="0"){
                         layer.msg("上传文件成功");
+                        getUploadInfo();
                     }else{
                         layer.msg("上传文件失败");
                     }
@@ -69,9 +107,10 @@
     <button type="button" class="layui-btn" id="Rest" style="width: 30%">
         <i class="layui-icon">&#xe67c;</i>上传kms-restful.jar
     </button>
+    <span id="Rest_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
     <br/>
     <br/>
-    <input type="text" id="version"  class="layui-input" placeholder="当前版本号是：2.13，请输入新的版本号" autocomplete="off" style="width:30%;font-size: medium">
+    <input type="text" id="version"  class="layui-input" placeholder="" autocomplete="off" style="width:30%;font-size: medium">
     <br/>
     <br/>
     <button class="layui-btn" lay-submit lay-filter="formDemo" style="margin-left: 0px" onclick="updateVersionInfo()">提交</button>
@@ -93,7 +132,7 @@
             success:function(res){
                 init();
                 $("#version").val("");
-                if(res.code="0"){
+                if(res.code=="0"){
                     layer.msg("修改版本号成功");
                 }else{
                     layer.msg("修改版本号失败");
