--- a/src/main/resources/static/Standard.html
+++ b/src/main/resources/static/Standard.html
@@ -26,8 +26,21 @@
                 contentType:false,
                 dataType:"json",
                 success:function(result){
-                    var version = result.version.toString();
-                    $("#version").attr("placeholder","当前版本号是："+version+"，请输入新的版本号");
+                    debugger;
+                    for (var key in result) {
+                        switch (key) {
+                            case "update.zip":
+                                $("#zip_lastModifiedTime").text("已上传！"+result[key]);
+                                break;
+                            case "update.sh":
+                                $("#sh_lastModifiedTime").text("已上传！"+result[key]);
+                                break;
+                            case "version":
+                                $("#version").attr("placeholder","当前版本号是："+result[key].toString()+"，请输入新的版本号");
+                            default:
+                                break;
+                        }
+                    }
                 },
 
                 error:function(e){
@@ -49,8 +62,9 @@
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
                     debugger;
-                    if(res.code="0"){
+                    if(res.code=="0"){
                         layer.msg("上传文件成功");
+                        init();
                     }else{
                         layer.msg("上传文件失败");
                     }
@@ -69,8 +83,9 @@
                 }
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
-                    if(res.code="0"){
+                    if(res.code=="0"){
                         layer.msg("上传文件成功");
+                        init();
                     }else{
                         layer.msg("上传文件失败");
                     }
@@ -89,14 +104,16 @@
     <button type="button" class="layui-btn" id="SecKMS" style="width: 30%">
         <i class="layui-icon">&#xe67c;</i>上传update.zip
     </button>
+    <span id="zip_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
     <br/>
     <br/>
     <button type="button" class="layui-btn" id="updateBase" style="width: 30%">
         <i class="layui-icon">&#xe67c;</i>上传update.sh
     </button>
+    <span id="sh_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
     <br/>
     <br/>
-    <input type="text" id="version"  class="layui-input" placeholder="当前版本号是：2.13，请输入新的版本号" autocomplete="off" style="width:30%;font-size: medium">
+    <input type="text" id="version"  class="layui-input" placeholder="" autocomplete="off" style="width:30%;font-size: medium">
     <br/>
     <br/>
     <button class="layui-btn" lay-submit lay-filter="formDemo" style="margin-left: 0px" onclick="updateVersionInfo()">提交</button>
@@ -115,9 +132,8 @@
             contentType:false,
             dataType:"json",
             success:function(res){
-                init();
                 $("#version").val("");
-                if(res.code="0"){
+                if(res.code=="0"){
                     layer.msg("修改版本号成功");
                 }else{
                     layer.msg("修改版本号失败");
