--- a/src/main/resources/static/SecKms.html
+++ b/src/main/resources/static/SecKms.html
@@ -26,15 +26,30 @@
                 contentType:false,
                 dataType:"json",
                 success:function(result){
-                    var version = result.version.toString();
-                    console.log(version);
-                    $("#version").attr("placeholder","当前版本号是："+version+"，请输入新的版本号");
+                    debugger;
+                    for (var key in result) {
+                       switch (key) {
+                           case "SecKMS.war":
+                               $("#SecKMS_lastModifiedTime").text("已上传！"+result[key]);
+                               break;
+                           case "updatebase.sql":
+                               $("#updatebase_lastModifiedTime").text("已上传！"+result[key]);
+                               break;
+                           case "version":
+                               $("#version").attr("placeholder","当前版本号是："+result[key]+"，请输入新的版本号");
+                           default:
+                               break;
+                       }
+                    }
                 },
 
                 error:function(e){
                     console.log("error");
                 }
             });
+        }
+        function downloadSqlErrorLog(){
+            window.location.href = "package/downloadSqlErrorLog";
         }
         layui.use('upload', function(){
             var upload = layui.upload;
@@ -49,8 +64,9 @@
                 }
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
-                    if(res.code="0"){
+                    if(res.code=="0"){
                         layer.msg("上传文件成功");
+                        init();
                     }else{
                         layer.msg("上传文件失败");
                     }
@@ -68,11 +84,14 @@
                     layer.load(); //上传loading
                 }
                 ,done: function(res, index, upload){
+                    debugger;
                     layer.closeAll('loading'); //关闭loading
-                    if(res.code="0"){
+                    if(res.code=="0"){
                         layer.msg("上传文件成功");
+                        init();
                     }else{
-                        layer.msg("上传文件失败");
+                        layer.msg(res.msg);
+                        downloadSqlErrorLog();
                     }
                 }
                 ,error: function(index, upload){
@@ -89,14 +108,16 @@
     <button type="button" class="layui-btn" id="SecKMS" style="width: 30%">
         <i class="layui-icon">&#xe67c;</i>上传SecKMS.war
     </button>
+    <span id="SecKMS_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
     <br/>
     <br/>
     <button type="button" class="layui-btn" id="updateBase" style="width: 30%">
         <i class="layui-icon">&#xe67c;</i>上传updatebase.sql
     </button>
+    <span id="updatebase_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
     <br/>
     <br/>
-    <input type="text" id="version"  class="layui-input" placeholder="当前版本号是：2.13，请输入新的版本号" autocomplete="off" style="width:30%;font-size: medium">
+    <input type="text" id="version"  class="layui-input" placeholder="" autocomplete="off" style="width:30%;font-size: medium">
     <br/>
     <br/>
     <button class="layui-btn" lay-submit lay-filter="formDemo" style="margin-left: 0px" onclick="updateVersionInfo()">提交</button>
@@ -110,14 +131,12 @@
             url:"/KmsPackage/updateVersionInfo?module=SecKMS&version="+version,
             async: false, //同步执行
             type:"get",
-//               data:form,
             processData:false,
             contentType:false,
             dataType:"json",
             success:function(res){
-                init();
                 $("#version").val("");
-                if(res.code="0"){
+                if(res.code=="0"){
                     layer.msg("修改版本号成功");
                 }else{
                     layer.msg("修改版本号失败");
