--- a/src/main/resources/static/KMIP.html
+++ b/src/main/resources/static/KMIP.html
@@ -60,7 +60,7 @@
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
                     debugger;
-                    if(res.code=="0"){
+                    if(res.code==0){
                         layer.msg("上传文件成功");
                         init();
                     }else{
@@ -106,7 +106,8 @@
             success:function(res){
                 init();
                 $("#version").val("");
-                if(res.code=="0"){
+                parseInt(a)<parseInt(b)
+                if(res.code==0){
                     layer.msg("修改版本号成功");
                 }else{
                     layer.msg("修改版本号失败");
