--- a/src/main/resources/static/KMIPController.html
+++ b/src/main/resources/static/KMIPController.html
@@ -56,7 +56,7 @@
                 }
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
-                    if(res.code=="0"){
+                    if(res.code==0){
                         layer.msg("上传文件成功");
                         init();
                     }else{
