--- a/src/main/resources/static/Rest.html
+++ b/src/main/resources/static/Rest.html
@@ -86,7 +86,7 @@
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
 
-                    if(res.code=="0"){
+                    if(res.code==0){
                         layer.msg("上传文件成功");
                         getUploadInfo();
                     }else{
@@ -132,7 +132,7 @@
             success:function(res){
                 init();
                 $("#version").val("");
-                if(res.code=="0"){
+                if(res.code==0){
                     layer.msg("修改版本号成功");
                 }else{
                     layer.msg("修改版本号失败");
