--- a/src/main/resources/static/Standard.html
+++ b/src/main/resources/static/Standard.html
@@ -62,7 +62,7 @@
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
                     debugger;
-                    if(res.code=="0"){
+                    if(res.code==0){
                         layer.msg("上传文件成功");
                         init();
                     }else{
@@ -83,7 +83,7 @@
                 }
                 ,done: function(res, index, upload){
                     layer.closeAll('loading'); //关闭loading
-                    if(res.code=="0"){
+                    if(res.code==0){
                         layer.msg("上传文件成功");
                         init();
                     }else{
@@ -133,7 +133,7 @@
             dataType:"json",
             success:function(res){
                 $("#version").val("");
-                if(res.code=="0"){
+                if(res.code==0){
                     layer.msg("修改版本号成功");
                 }else{
                     layer.msg("修改版本号失败");
