上传签名文件，打包的时候，会验证签名的正确性

--- a/src/main/resources/static/Package.html
+++ b/src/main/resources/static/Package.html
@@ -61,6 +61,8 @@
                     layer.closeAll('loading'); //关闭loading
                     if(res.code==0){
                         layer.msg("上传文件并打包成功");
+                    }else if(res.code==500301){
+                        layer.msg("签名验证失败");
                     }else{
                         layer.msg("上传文件失败");
                     }
