--- a/src/main/resources/static/Rest.html
+++ b/src/main/resources/static/Rest.html
@@ -16,6 +16,7 @@
     <script src="js/jquery.form.js" charset="utf-8"></script>
     <script src="js/zoomify.min.js" charset="utf-8"></script>
     <script>
+        var contextPath = this.location.href.split("/KmsPackage")[0]+"/KmsPackage";
         function init(){
             $.ajax({
                 url:"/KmsPackage/getVersionInfo?module=Rest",
@@ -26,7 +27,6 @@
                 contentType:false,
                 dataType:"json",
                 success:function(result){
-                    debugger;
                     for (var key in result) {
                         switch (key) {
                             case "kms-restful.jar":
@@ -45,6 +45,12 @@
                 }
             });
         }
+        function download() {
+            window.location.href = contextPath+"/download/Rest";
+        }
+        function downloadTemplate() {
+            window.location.href = contextPath+"/downloadTemplate/Rest";
+        }
         function getUploadInfo(){
             $.ajax({
                 url:"/KmsPackage/getUploadInfo?module=Rest",
@@ -55,7 +61,6 @@
                 contentType:false,
                 dataType:"json",
                 success:function(result){
-                    debugger;
                     for (var key in result) {
                         switch (key) {
                             case "kms-restful.jar":
@@ -77,7 +82,7 @@
             //执行实例
             var uploadInst = upload.render({
                 elem: '#Rest' //绑定元素
-                ,url: '/KmsPackage/upload/Rest/jar' //上传接口
+                ,url: '/KmsPackage/upload/Rest/zip' //上传接口
                 ,accept: 'file' //允许上传的文件类型
                 ,size: 0 //不限制上传文件的大小
                 ,before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
@@ -98,23 +103,30 @@
                 }
             });
         });
-
     </script>
 </head>
 <body onload="init()">
 
-<center style="position:absolute;top:100px;width:100%;font-size:25px;font-family:KaiTi_GB2312 ">
-    <button type="button" class="layui-btn" id="Rest" style="width: 30%">
-        <i class="layui-icon">&#xe67c;</i>上传kms-restful.jar
-    </button>
-    <span id="Rest_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
-    <br/>
-    <br/>
-    <input type="text" id="version"  class="layui-input" placeholder="" autocomplete="off" style="width:30%;font-size: medium">
-    <br/>
-    <br/>
-    <button class="layui-btn" lay-submit lay-filter="formDemo" style="margin-left: 0px" onclick="updateVersionInfo()">提交</button>
-
+<center style="position:absolute;top:100px;left:5%;width:100%;font-size:25px;font-family:KaiTi_GB2312 ">
+    <div style="width: 40%;position: relative;display: inline-block;">
+        <button type="button" class="layui-btn" id="Rest" style="width: 60%;float: left">
+            <i class="layui-icon">&#xe67c;</i>上传kms-restful.zip
+        </button>
+        <button type="button" class="layui-btn layui-btn-warm" id="Download" onclick="download()" style="width: 10%;float: left;margin-left: 10px;padding-left: 0px;padding-right: 0px;margin-bottom: 30px">
+            下载
+        </button>
+        <button type="button" class="layui-btn layui-btn-warm" id="DownloadTemplate" onclick="downloadTemplate()" style="width: 10%;float: left;padding-left: 0px;padding-right: 0px">
+            下载模板
+        </button>
+        <span id="Rest_lastModifiedTime" style="position:absolute;font-size:16px;font-family:KaiTi_GB2312;color: #ff3355"></span>
+        <br/>
+        <br/>
+        <input type="text" id="version"  class="layui-input" placeholder="" autocomplete="off" style="float: left;width:60%;font-size: medium">
+        <br/>
+        <br/>
+        <br/>
+        <button class="layui-btn" lay-submit lay-filter="formDemo" style="position: relative;left:-20%;" onclick="updateVersionInfo()">提交</button>
+    </div>
 </center>
 
 </body>
